src/objects/ConfigurationList__c.object
<CustomObject>
    <fields>
        <fullName>BussinessArea__c</fullName>
        <label>代理商经营范围编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommonName__c</fullName>
        <label>通用名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigName__c</fullName>
        <label>配置单名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractApprovalStatus__c</fullName>
        <formula>text(ContractReview__r.ContractReviewStatus__c)</formula>
        <label>合同审批状态</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractChangeType__c</fullName>
        <formula>text(ContractReview__r.TypeContractChange__c)</formula>
        <label>合同变更类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractReview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>合同预审表</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>ContractReviewHT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeductionCategory__c</fullName>
        <label>扣税类别</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentDiscount__c</fullName>
        <label>设备折扣率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EquipmentStandardPrice__c</fullName>
        <label>设备基准总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EquipmentTotalPrice__c</fullName>
        <label>设备成交总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinalPrice__c</fullName>
        <label>成交总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalCurrencyTaxPrice__c</fullName>
        <label>本币含税单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LogisticsOrganization__c</fullName>
        <label>物流组织</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainQuantity__c</fullName>
        <label>主数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaterialCoding__c</fullName>
        <label>物料编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialModel__c</fullName>
        <label>物料型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoTaxAmount__c</fullName>
        <label>无税金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportuniy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>产品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>项目信息</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>NeoMedix</fullName>
                </value>
                <value>
                    <fullName>Frastema</fullName>
                </value>
                <value>
                    <fullName>OPTOS</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
                <value>
                    <fullName>HAI</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>TOKA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Productname66__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>库存名称</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>库存</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product3__c</referenceTo>
        <relationshipLabel>配置单/报价单</relationshipLabel>
        <relationshipName>ProductName5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectInformation__c</fullName>
        <label>项目信息</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>NeoMedix</fullName>
                </value>
                <value>
                    <fullName>Frastema</fullName>
                </value>
                <value>
                    <fullName>OPTOS</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
                <value>
                    <fullName>HAI</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>TOKA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceiptCountry__c</fullName>
        <label>收货国家地区</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationNumber__c</fullName>
        <label>注册证号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardPrice__c</fullName>
        <label>标准总价格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SynchronizationContract__c</fullName>
        <defaultValue>(&quot;否&quot;)</defaultValue>
        <label>是否同步到合同预审</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>否</fullName>
                </value>
                <value>
                    <fullName>是</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemStandardTotalPrice__c</fullName>
        <label>系统基准价总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>税码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxInclusive__c</fullName>
        <label>含税单价</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>税率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taxfreeprice__c</fullName>
        <label>无税单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TheMainCurrencyTaxPrice__c</fullName>
        <label>主本币含税单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCurrencyTax__c</fullName>
        <label>本币价税合计</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <label>价税合计</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>单位/主单位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WareHouseUnit__c</fullName>
        <formula>configurationList__r.Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>库存单位</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ybjg__c</fullName>
        <label>延保价格</label>
        <summarizedField>ExtendedWarrantyProduct__c.ExtendWarrantyPrice__c</summarizedField>
        <summaryForeignKey>ExtendedWarrantyProduct__c.ConfigurationList__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>configurationList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>库存名称</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ConfigurationList__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>库存</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ConfigurationList__c</referenceTo>
        <relationshipLabel>配置单/报价单</relationshipLabel>
        <relationshipName>configurationList2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpx__c</fullName>
        <label>产品线</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>NeoMedix</fullName>
                </value>
                <value>
                    <fullName>Frastema</fullName>
                </value>
                <value>
                    <fullName>OPTOS</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
                <value>
                    <fullName>HAI</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>TOKA</fullName>
                </value>
                <value>
                    <fullName>GI</fullName>
                </value>
                <value>
                    <fullName>Espansione</fullName>
                </value>
                <value>
                    <fullName>Diopsys</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Vrmagic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>discount__c</fullName>
        <label>折扣</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>配置单/报价单</relationshipLabel>
        <relationshipName>order23</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project__c</fullName>
        <label>项目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shuliang__c</fullName>
        <label>主机数量</label>
        <summarizedField>Host__c.NumberTypeIN__c</summarizedField>
        <summaryForeignKey>Host__c.ConfigurationList__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tax__c</fullName>
        <label>税额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xh__c</fullName>
        <label>型号</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpx__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>HRA Multicolor</fullName>
                </value>
                <value>
                    <fullName>Multicolor+FFA</fullName>
                </value>
                <value>
                    <fullName>OCT</fullName>
                </value>
                <value>
                    <fullName>OCT2</fullName>
                </value>
                <value>
                    <fullName>HRA+OCT</fullName>
                </value>
                <value>
                    <fullName>HRA+OCT2</fullName>
                </value>
                <value>
                    <fullName>HRT3</fullName>
                </value>
                <value>
                    <fullName>OCT2 Multicolor</fullName>
                </value>
                <value>
                    <fullName>OCTMulticolor</fullName>
                </value>
                <value>
                    <fullName>UWF</fullName>
                </value>
                <value>
                    <fullName>Vitra532</fullName>
                </value>
                <value>
                    <fullName>Supra 532</fullName>
                </value>
                <value>
                    <fullName>YAG</fullName>
                </value>
                <value>
                    <fullName>SLT</fullName>
                </value>
                <value>
                    <fullName>supra810</fullName>
                </value>
                <value>
                    <fullName>supra577</fullName>
                </value>
                <value>
                    <fullName>VMS</fullName>
                </value>
                <value>
                    <fullName>suprascan577</fullName>
                </value>
                <value>
                    <fullName>5CL+XL532FMW</fullName>
                </value>
                <value>
                    <fullName>Axis Nano</fullName>
                </value>
                <value>
                    <fullName>Compact Touch（A超+B超）</fullName>
                </value>
                <value>
                    <fullName>Aviso(A超+B超)</fullName>
                </value>
                <value>
                    <fullName>Aviso(UBM)</fullName>
                </value>
                <value>
                    <fullName>Aviso一体机(A超+B超+UBM)</fullName>
                </value>
                <value>
                    <fullName>Compact Touch UBM</fullName>
                </value>
                <value>
                    <fullName>Proveo8</fullName>
                </value>
                <value>
                    <fullName>Leica 3D</fullName>
                </value>
                <value>
                    <fullName>M844F40</fullName>
                </value>
                <value>
                    <fullName>M844F20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>配置单/报价单</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>cpx__c</columns>
        <columns>xh__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <displayFormat>PZD-{YYYYMMDD}-{000000000}</displayFormat>
        <label>配置单编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>配置单/报价单</pluralLabel>
    <recordTypes>
        <fullName>ConfigurationList</fullName>
        <active>true</active>
        <label>配置单-大型</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConfigurationListNormal</fullName>
        <active>true</active>
        <label>配置单-常规</label>
    </recordTypes>
    <recordTypes>
        <fullName>LockType</fullName>
        <active>true</active>
        <label>锁定</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stock</fullName>
        <active>true</active>
        <label>库存</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>lockRule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(ContractReview__r.ContractReviewStatus__c, &apos;已审批&apos;),NOT(ISPICKVAL(ContractReview__r.TypeContractChange__c, &apos;配置价格变更&apos;)))</errorConditionFormula>
        <errorMessage>合同状态为已审批，配置单为锁定状态，无法修改</errorMessage>
    </validationRules>
</CustomObject>